syntax = "proto3";
package challenge;

service SecretsService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetSecret(GetSecretRequest) returns (SecretResponse);
  rpc ListDocs(ListRequest) returns (ListResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  int64 expires_in = 2;
}

message GetSecretRequest {
  string resource_id = 1;
}

message SecretResponse {
  string secret = 1;
  int64 created = 20;
}

message ListRequest {
  int32 page = 1;
  int32 per_page = 2;
}

message ListResponse {
  repeated DocSummary items = 1;
  int32 total = 2;
}

message DocSummary {
  string id = 1;
  string title = 2;
  int64 created_unix = 50;
}